--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -377,6 +377,9 @@
       "version-0.14.5/version-0.14.5-api-decimalconstants": {
         "title": "DecimalConstants"
       },
+      "version-0.15.1/version-0.15.1-doc-faq": {
+        "title": "Rationale"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
