New interface for locale display names

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -89,6 +89,9 @@
       "api-decimalformatstyletype": {
         "title": "DecimalFormatStyleType"
       },
+      "api-displaynameoptions": {
+        "title": "DisplayNameOptions"
+      },
       "api-erafieldoptions": {
         "title": "EraFieldOptions"
       },
