Changes for 0.17 release

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -80,6 +80,9 @@
       "api-decimal": {
         "title": "Decimal"
       },
+      "api-decimaladjustoptions": {
+        "title": "DecimalAdjustOptions"
+      },
       "api-decimalconstants": {
         "title": "DecimalConstants"
       },
