--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -776,6 +776,15 @@
       "version-0.18.2/version-0.18.2-doc-quickstart": {
         "title": "Quick start"
       },
+      "version-0.19.0/version-0.19.0-api-languageidtype": {
+        "title": "LanguageIdType"
+      },
+      "version-0.19.0/version-0.19.0-api-scriptidtype": {
+        "title": "ScriptIdType"
+      },
+      "version-0.19.0/version-0.19.0-api-unittype": {
+        "title": "UnitType"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
