--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -785,6 +785,9 @@
       "version-0.19.0/version-0.19.0-api-unittype": {
         "title": "UnitType"
       },
+      "version-0.19.1/version-0.19.1-api-quantity": {
+        "title": "Quantity"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
