--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -251,6 +251,9 @@
       "doc-math": {
         "title": "Arbitrary Precision"
       },
+      "doc-messageformatting": {
+        "title": "Examples"
+      },
       "doc-quickstart": {
         "title": "Quick start"
       },
@@ -797,6 +800,9 @@
       "version-0.19.2/version-0.19.2-api-relativetimeformatoptions": {
         "title": "RelativeTimeFormatOptions"
       },
+      "version-0.20.1/version-0.20.1-doc-messageformatting": {
+        "title": "Examples"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
@@ -1020,6 +1026,7 @@
       "Locales": "Locales",
       "Calendars": "Calendars",
       "Math": "Math",
+      "Message Formatting": "Message Formatting",
       "Design": "Design",
       "API": "API",
       "General": "General",
