Add message formatter types

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -158,6 +158,12 @@
       "api-messageformatfuncmap": {
         "title": "MessageFormatFuncMap"
       },
+      "api-messageformatter": {
+        "title": "MessageFormatter"
+      },
+      "api-messageformatteroptions": {
+        "title": "MessageFormatterOptions"
+      },
       "api-messagematcher": {
         "title": "MessageMatcher"
       },
