--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -866,6 +866,12 @@
       "version-0.22.3/version-0.22.3-api-messageformatteroptions": {
         "title": "MessageFormatterOptions"
       },
+      "version-0.23.0/version-0.23.0-api-decimalformatoptions": {
+        "title": "DecimalFormatOptions"
+      },
+      "version-0.23.0/version-0.23.0-api-relativetimeformatoptions": {
+        "title": "RelativeTimeFormatOptions"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
