Changes to plurals for 0.24.0 release

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -179,6 +179,9 @@
       "api-persiandate": {
         "title": "PersianDate"
       },
+      "api-pluralrules": {
+        "title": "PluralRules"
+      },
       "api-quantity": {
         "title": "Quantity"
       },
