--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -908,6 +908,9 @@
       "version-0.25.4/version-0.25.4-api-dateintervalformatoptions": {
         "title": "DateIntervalFormatOptions"
       },
+      "version-0.25.5/version-0.25.5-api-dateintervalformatoptions": {
+        "title": "DateIntervalFormatOptions"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
