--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -911,6 +911,33 @@
       "version-0.25.5/version-0.25.5-api-dateintervalformatoptions": {
         "title": "DateIntervalFormatOptions"
       },
+      "version-0.25.9/version-0.25.9-api-bundle": {
+        "title": "Bundle"
+      },
+      "version-0.25.9/version-0.25.9-api-cldr-calendars": {
+        "title": "CLDR.Calendars"
+      },
+      "version-0.25.9/version-0.25.9-api-cldr-units": {
+        "title": "CLDR.Units"
+      },
+      "version-0.25.9/version-0.25.9-api-decimal": {
+        "title": "Decimal"
+      },
+      "version-0.25.9/version-0.25.9-api-fieldwidthtype": {
+        "title": "FieldWidthType"
+      },
+      "version-0.25.9/version-0.25.9-api-messageengine": {
+        "title": "MessageEngine"
+      },
+      "version-0.25.9/version-0.25.9-api-relativetimefieldformatoptions": {
+        "title": "RelativeTimeFieldFormatOptions"
+      },
+      "version-0.25.9/version-0.25.9-doc-calendar-overview": {
+        "title": "Calendar Overview"
+      },
+      "version-0.25.9/version-0.25.9-doc-messageformatting-custom": {
+        "title": "Customization"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
