Add link to yarn package

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -587,6 +587,7 @@
       "API": "API",
       "Demo ": "Demo ",
       "Github": "Github",
+      "Yarn": "Yarn",
       "NPM": "NPM"
     },
     "categories": {
