Update docs for 1.0.3

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -143,6 +143,9 @@
       "api-localematcher": {
         "title": "LocaleMatcher"
       },
+      "api-localematcheroptions": {
+        "title": "LocaleMatcherOptions"
+      },
       "api-mathcontext": {
         "title": "MathContext"
       },
