Update docs to sync with master

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -86,6 +86,9 @@
       "api-datetimepatternfieldtype": {
         "title": "DateTimePatternFieldType"
       },
+      "api-datewrapperformatoptions": {
+        "title": "DateWrapperFormatOptions"
+      },
       "api-dayperiodalttype": {
         "title": "DayPeriodAltType"
       },
