--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -598,6 +598,51 @@
       },
       "version-1.0.9/version-1.0.9-doc-quickstart": {
         "title": "Quick start"
+      },
+      "version-1.1.0/version-1.1.0-api-calendardate": {
+        "title": "CalendarDate"
+      },
+      "version-1.1.0/version-1.1.0-api-calendardatefields": {
+        "title": "CalendarDateFields"
+      },
+      "version-1.1.0/version-1.1.0-api-cldr-calendars": {
+        "title": "CLDR.Calendars"
+      },
+      "version-1.1.0/version-1.1.0-api-cldr-units": {
+        "title": "CLDR.Units"
+      },
+      "version-1.1.0/version-1.1.0-api-dateformataltoptions": {
+        "title": "DateFormatAltOptions"
+      },
+      "version-1.1.0/version-1.1.0-api-dateformatoptions": {
+        "title": "DateFormatOptions"
+      },
+      "version-1.1.0/version-1.1.0-api-dateintervalformatoptions": {
+        "title": "DateIntervalFormatOptions"
+      },
+      "version-1.1.0/version-1.1.0-api-daterawformatoptions": {
+        "title": "DateRawFormatOptions"
+      },
+      "version-1.1.0/version-1.1.0-api-datewrapperformatoptions": {
+        "title": "DateWrapperFormatOptions"
+      },
+      "version-1.1.0/version-1.1.0-api-dayperiodalttype": {
+        "title": "DayPeriodAltType"
+      },
+      "version-1.1.0/version-1.1.0-api-eraalttype": {
+        "title": "EraAltType"
+      },
+      "version-1.1.0/version-1.1.0-api-scriptidtype": {
+        "title": "ScriptIdType"
+      },
+      "version-1.1.0/version-1.1.0-api-unittype": {
+        "title": "UnitType"
+      },
+      "version-1.1.0/version-1.1.0-doc-locales-matching": {
+        "title": "Language matching"
+      },
+      "version-1.1.0/version-1.1.0-doc-messageformatting-custom": {
+        "title": "Customization"
       }
     },
     "links": {
