--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -611,6 +611,9 @@
       "version-1.1.1/version-1.1.1-api-cldr-units": {
         "title": "CLDR.Units"
       },
+      "version-1.1.1/version-1.1.1-api-currencyformatoptions": {
+        "title": "CurrencyFormatOptions"
+      },
       "version-1.1.1/version-1.1.1-api-dateformataltoptions": {
         "title": "DateFormatAltOptions"
       },
