--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -652,6 +652,12 @@
       },
       "version-1.1.2/version-1.1.2-doc-messageformatting-custom": {
         "title": "Customization"
+      },
+      "version-1.2.1/version-1.2.1-api-cldr-calendars": {
+        "title": "CLDR.Calendars"
+      },
+      "version-1.2.1/version-1.2.1-doc-messageformatting-custom": {
+        "title": "Customization"
       }
     },
     "links": {
