--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -667,6 +667,18 @@
       },
       "version-1.2.8/version-1.2.8-doc-resource-patching": {
         "title": "Resource Patching"
+      },
+      "version-1.3.1/version-1.3.1-api-languageidtype": {
+        "title": "LanguageIdType"
+      },
+      "version-1.3.1/version-1.3.1-api-regionidtype": {
+        "title": "RegionIdType"
+      },
+      "version-1.3.1/version-1.3.1-api-timezonetype": {
+        "title": "TimeZoneType"
+      },
+      "version-1.3.1/version-1.3.1-api-unittype": {
+        "title": "UnitType"
       }
     },
     "links": {
