--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -679,6 +679,21 @@
       },
       "version-1.3.3/version-1.3.3-api-unittype": {
         "title": "UnitType"
+      },
+      "version-1.5.1/version-1.5.1-api-currencytype": {
+        "title": "CurrencyType"
+      },
+      "version-1.5.1/version-1.5.1-api-languageidtype": {
+        "title": "LanguageIdType"
+      },
+      "version-1.5.1/version-1.5.1-api-scriptidtype": {
+        "title": "ScriptIdType"
+      },
+      "version-1.5.1/version-1.5.1-api-timezonetype": {
+        "title": "TimeZoneType"
+      },
+      "version-1.5.1/version-1.5.1-api-unittype": {
+        "title": "UnitType"
       }
     },
     "links": {
